--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "description": "Node module for kaspa",
   "main": "index.ts",
   "author": "Denis.S",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^14.14.6",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
+  }
 }
