--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,21 @@
   "compilerOptions": {
     "target": "es6",
     "lib": ["ES2020", "DOM"],
-    "module": "commonjs",
     "moduleResolution": "node",
     // this enables stricter inference for data properties on `this`
     "strict": true,
     "skipLibCheck": true,
     "typeRoots": ["types", "node_modules/@types"],
+    "paths": {
+      "*": ["./types/*"]
+    },
+    "baseUrl": ".",
     "outDir": "./dist",
     "rootDir": ".",
     "declaration": true,
     "declarationMap": true,
     "inlineSourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "resolveJsonModule": true
   }
 }
