--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "main": "index.ts",
   "author": "Denis.S",
   "license": "ISC",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc --watch"
+  },
   "devDependencies": {
     "@types/node": "^14.14.6",
+    "bitcore-lib-cash": "^8.23.1",
+    "bitcore-mnemonic": "^8.23.1",
+    "browser-passworder": "^2.0.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "winston": "^3.3.3"
   }
 }
