fixes in package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kaspa-node-module",
   "version": "0.0.1",
   "description": "Node module for kaspa",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "author": "Denis.S",
   "license": "ISC",
   "scripts": {
