--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "prepare": "npm install . && npm run build"
+    "prepare": "npm run build"
   },
-  "devDependencies": {
+  "dependencies": {
     "@types/node": "^14.14.6",
     "bitcore-lib-cash": "^8.23.1",
     "bitcore-mnemonic": "^8.23.1",
