--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
+    "install": "npm install .",
     "prepare": "npm run build"
   },
   "dependencies": {
