--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "browser-passworder": "^2.0.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "passworder": "file:../flow-key-crypt",
+    "@aspectron/flow-key-crypt": "file:../flow-key-crypt",
     "winston": "^3.3.3"
   }
 }
