--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "resolveJsonModule": true,
+    "experimentalDecorators":true,
     "module":"CommonJS"//,
     //"_esModuleInterop": true
   }
