--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aspectron/flow-key-crypt": "git+https://github.com/aspectron/flow-key-crypt",
     "@types/node": "^14.14.9",
     "bitcore-lib-cash": "^8.23.1",
+    "bitcoinjs-lib": "*",
     "bitcore-mnemonic": "^8.23.1",
     "browser-passworder": "^2.0.3",
     "ts-node": "^9.0.0",
