--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-passworder": "^2.0.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "blake2": "*"
   }
 }
