--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
     "winston": "^3.3.3",
-    "blake2": "*"
+    "blake2b-wasm": "*"
   }
 }
