--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Node module for kaspa",
   "main": "dist/index.js",
-  "author": "Denis.S",
+  "author": "Kaspa Developers",
   "license": "ISC",
   "scripts": {
     "build": "tsc",
@@ -11,14 +11,15 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "@aspectron/flow-key-crypt": "git+https://github.com/aspectron/flow-key-crypt",
+    "@aspectron/flow-key-crypt": "aspectron/flow-key-crypt",
+    "secp256k1-wasm": "aspectron/secp256k1-wasm",
+    "blake2b-wasm": "*",
     "@types/node": "^14.14.9",
     "bitcore-lib-cash": "^8.23.1",
     "bitcore-mnemonic": "^8.23.1",
     "browser-passworder": "^2.0.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
-    "winston": "^3.3.3",
-    "blake2b-wasm": "*"
+    "winston": "^3.3.3"
   }
 }
