--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "DEFAULT_FEE": 1000,
   "DEFAULT_NETWORK": {
-    "prefix": "kaspatest",
-    "description": "Testnet",
+    "prefix": "kaspadev",
+    "description": "Devnet",
     "apiBaseUrl": "https://testnet-068rc1-beta-kasparovd.kas.pa"
   }
 }
