--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "prepare": "npm run build",
-    "install": "npm run build"
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@aspectron/flow-key-crypt": "aspectron/flow-key-crypt",
@@ -20,7 +19,7 @@
     "bitcore-mnemonic": "^8.23.1",
     "browser-passworder": "^2.0.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
+    "typescript": "*",
     "winston": "^3.3.3"
   }
 }
