--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   },
   "dependencies": {
     "@aspectron/flow-key-crypt": "aspectron/flow-key-crypt",
-    "secp256k1-wasm": "aspectron/secp256k1-wasm",
-    "blake2b-wasm": "*",
     "@types/node": "^14.14.9",
-    "bitcore-lib-cash": "^8.23.1",
+    "kaspacore-lib": "aspectron/kaspacore-lib",
     "bitcore-mnemonic": "^8.23.1",
     "browser-passworder": "^2.0.3",
     "ts-node": "^9.0.0",
