--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaspa-wallet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Node module for kaspa",
   "main": "dist/index.js",
   "author": "Kaspa Developers",
@@ -13,9 +13,10 @@
   "dependencies": {
     "@aspectron/flow-key-crypt": "aspectron/flow-key-crypt",
     "@types/node": "^14.14.9",
-    "kaspacore-lib": "aspectron/kaspacore-lib",
     "bitcore-mnemonic": "^8.23.1",
     "browser-passworder": "^2.0.3",
+    "decimal.js": "^10.2.1",
+    "kaspacore-lib": "aspectron/kaspacore-lib",
     "ts-node": "^9.0.0",
     "typescript": "*",
     "winston": "^3.3.3"
