--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     // this enables stricter inference for data properties on `this`
     "strict": true,
     "skipLibCheck": true,
-    "typeRoots": ["types", "node_modules/@types"],
+    "typeRoots": ["node_modules/@types", "types"],
     "paths": {
       "*": ["./types/*","./lib/*"] 
     },
