--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   "dependencies": {
     "@aspectron/flow-key-crypt": "aspectron/flow-key-crypt",
     "@aspectron/flow-logger": ">=1.0.3",
+    "@kaspa/core-lib": "0.0.3",
     "@types/node": "^14.14.9",
     "bitcore-mnemonic": "^8.23.1",
     "browser-passworder": "^2.0.3",
+    "crypto-js": "*",
     "decimal.js": "^10.2.1",
-    "@kaspa/core-lib": "*",
     "ts-node": "^9.0.0",
-    "typescript": "*",
-    "crypto-js": "*"
+    "typescript": "*"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.1"
-  }
+  },
+  "files": [
+    "dist",
+    "types",
+    "utils",
+    "wallet",
+    "index.ts",
+    "README.md",
+    "tsconfig.json"
+  ]
 }
