--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaspa/wallet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Node module for kaspa",
   "main": "dist/index.js",
   "author": "ASPECTRON Inc.",
@@ -16,12 +16,12 @@
     "@types/node": "^14.14.9",
     "bitcore-mnemonic": "^8.23.1",
     "browser-passworder": "^2.0.3",
-    "crypto-js": "*",
-    "decimal.js": "^10.2.1",
-    "ts-node": "^9.0.0",
-    "typescript": "*"
+    "crypto-js": "^4.0.1",
+    "decimal.js": "^10.2.1"
   },
   "devDependencies": {
+    "typescript": "*",
+    "ts-node": "^9.0.0",
     "@types/crypto-js": "^4.0.1"
   },
   "files": [
