--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@kaspa/wallet",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Node module for kaspa",
   "main": "dist/index.js",
   "author": "ASPECTRON Inc.",
   "license": "ISC",
   "scripts": {
     "watch": "tsc --watch",
-    "prepublishOnly": "rm -rf ./dist && npm install --also=dev && tsc"
+    "prepublishOnly": "rm -rf ./dist && rm -f package-lock.json && npm install --also=dev && tsc"
   },
   "dependencies": {
     "@aspectron/flow-logger": ">=1.0.3",
