--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaspa/wallet",
-  "version": "1.4.4",
+  "version": "1.4.5",
   "description": "Node module for kaspa",
   "main": "dist/index.js",
   "author": "ASPECTRON Inc.",
@@ -16,7 +16,8 @@
     "bitcore-mnemonic": "^8.24.2",
     "browser-passworder": "^2.0.3",
     "crypto-js": "^4.0.0",
-    "decimal.js": "^10.2.1"
+    "decimal.js": "^10.2.1",
+    "secp256k1-wasm": "^1.0.3"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.1",
