--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "@kaspa/wallet",
+  "name": "@caldera-network/kaspa-wallet",
   "version": "1.4.21",
   "description": "Node module for kaspa",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "author": "ASPECTRON Inc.",
   "license": "ISC",
   "scripts": {
     "watch": "tsc --watch",
-    "prepublishOnly": "rm -rf ./dist && rm -f package-lock.json && npm install --also=dev && tsc"
+    "prepublishOnly": "rm -rf ./dist && npm install --include=dev && tsc && cp -r src/types dist/src/types"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
     "@aspectron/flow-logger": ">=1.0.3",
@@ -26,11 +29,6 @@
   },
   "files": [
     "dist",
-    "types",
-    "utils",
-    "wallet",
-    "index.ts",
-    "README.md",
-    "tsconfig.json"
+    "README.md"
   ]
 }
