--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.1",
+    "@types/node-fetch": "^2.6.2",
     "ts-node": "^9.0.0",
     "typescript": "4.8.3"
   },
