--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/node": "^14.14.9",
     "bitcore-mnemonic": "^8.24.2",
     "crypto-js": "^4.0.0",
-    "decimal.js": "^10.2.1",
+    "decimal.js": "^10.2.1"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.1",
